<resources>
    <string name="app_name">FamilyBoard</string>
    <string name="server_hint">https://familyboard.exemple.fr</string>
    <string name="server_label">Adresse de votre serveur FamilyBoard</string>
    <string name="connect">Se connecter</string>
    <string name="server_help">C\'est l\'adresse que vous utilisez déjà dans votre navigateur pour accéder à votre tableau de bord familial.</string>
    <string name="change_server">Changer de serveur</string>
    <string name="reload">Recharger</string>
    <string name="error_invalid_url">Adresse invalide. Exemple : https://familyboard.exemple.fr</string>
    <string name="check_update">Vérifier les mises à jour</string>
</resources>
